tests/api/reference/negative/11-concat-type.asm
const invalid: bytes = bytes.concat(b"A", "B")
